bynkc/tests/fixtures/positive/63_uses_cycle/src/x/main.bynk
commons x

uses y

type Xv = {
  who: Yv,
}
