bynkc/tests/fixtures/negative/151_fn_type_in_record_field/input.bynk
commons bad

type Handler = {
  callback: Int -> Int,
}
